# asset-snapshot

./: .gitignore  LICENSE  README.md  README.zh-CN.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  产品设计书.md
.codex/: AGENTS.md
.github/scripts/: gen-release-notes.sh
.github/workflows/: release.yml
scripts/: import_csv.py  sync-version.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: asset-snapshot.xml  main.desktop  postinst  postrm
src-tauri/icons/: asdb-file-icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/nsis/languages/: SimpChinese.nsh  TradChinese.nsh
src-tauri/rpm/: postinst  postrm
src-tauri/src/: calculations.rs  db.rs  lib.rs  main.rs  mime.rs  models.rs
src/components/: AboutModal.tsx  BackgroundTree.tsx  Button.tsx  ChoiceSelect.tsx  DatePicker.tsx  Field.tsx  Modal.tsx  Pagination.tsx  PasswordChangeModal.tsx  PasswordSetupModal.tsx  PathDisplay.tsx  ResizableHeader.tsx  SettingsModal.tsx  Stat.tsx  TimeRangeTabs.tsx  UnlockScreen.tsx
src/components/analysis/: AnalysisColumn.tsx  AnalysisItemCard.tsx  AnalysisModal.tsx
src/components/config/: ConfigModal.tsx
src/components/dashboard/: DashboardHeader.tsx  SnapshotHistory.tsx  TrendCharts.tsx
src/hooks/: useAnalysis.ts  useDashboardData.ts  usePassword.ts  usePlatformAccounts.ts  useSnapshotForm.ts
src/i18n/: en.ts  index.ts  types.ts  zh.ts
src/lib/: api.ts  assetCalculator.ts  chartTransformer.ts  constants.ts  date.ts  format.ts  queryClient.ts  types.ts
(+3 files in other folders)
