[package]
name = "asset-snapshot"
version = "0.1.0"
description = "个人资产快照与趋势分析工具"
authors = ["asset-snapshot"]
edition = "2021"

[lib]
name = "asset_snapshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2"
thiserror = "2.0"

[features]
default = []
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
